chore: setup automation

--- a/modeling_sheets.ipynb
+++ b/modeling_sheets.ipynb
@@ -39,250 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ID do Pedido Yampi</td>\n",
-       "      <td>Data de Criação</td>\n",
-       "      <td>Data de Pagamento</td>\n",
-       "      <td>Cliente</td>\n",
-       "      <td>Email</td>\n",
-       "      <td>Produto</td>\n",
-       "      <td>Quantidade</td>\n",
-       "      <td>Valor Total</td>\n",
-       "      <td>Status</td>\n",
-       "      <td>Método de Pagamento</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>134546134</td>\n",
-       "      <td>14/04/2025</td>\n",
-       "      <td>14/04/2025</td>\n",
-       "      <td>Cláudio Santos de Moraes</td>\n",
-       "      <td>claudiomoraes@apmpriopreto.com.br</td>\n",
-       "      <td>6 Frascos - Evo Prost Gotas (VJ CALL)</td>\n",
-       "      <td>1</td>\n",
-       "      <td>290</td>\n",
-       "      <td>Faturado</td>\n",
-       "      <td>Elo</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>134546014</td>\n",
-       "      <td>14/04/2025</td>\n",
-       "      <td>14/04/2025</td>\n",
-       "      <td>Carlos Donizete Rossetti</td>\n",
-       "      <td>transporte.rossetti@gmail.com</td>\n",
-       "      <td>Compre 3 leve 5 frascos Urocianina Gotas - LH</td>\n",
-       "      <td>1</td>\n",
-       "      <td>397</td>\n",
-       "      <td>Faturado</td>\n",
-       "      <td>American Express</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>134545763</td>\n",
-       "      <td>14/04/2025</td>\n",
-       "      <td>14/04/2025</td>\n",
-       "      <td>NELSON VARGAS</td>\n",
-       "      <td>nelson.vargas@premold.com.br</td>\n",
-       "      <td>Compre 2 e leve 3 frascos - Urocianina Gotas - JP</td>\n",
-       "      <td>1</td>\n",
-       "      <td>297</td>\n",
-       "      <td>Em transporte</td>\n",
-       "      <td>Visa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>134545738</td>\n",
-       "      <td>14/04/2025</td>\n",
-       "      <td></td>\n",
-       "      <td>Sílvio Gregório viana</td>\n",
-       "      <td>123gferromacae@gmail.com</td>\n",
-       "      <td>Compre 3 e Leve 5 Frascos INSUFREE Gotas - LH</td>\n",
-       "      <td>1</td>\n",
-       "      <td>396,9</td>\n",
-       "      <td>Cancelado</td>\n",
-       "      <td>Boleto Bancário</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2194</th>\n",
-       "      <td>135176701</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>Ronaldo Dias Dos Santos</td>\n",
-       "      <td>rdo473250@gmail.com</td>\n",
-       "      <td>Compre 5 e leve 10 frascos - Urocianina Gotas ...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>597</td>\n",
-       "      <td>Aguardando pagamento</td>\n",
-       "      <td>Boleto Bancário</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2195</th>\n",
-       "      <td>135177779</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>José Celso da Costa Neto</td>\n",
-       "      <td>jc.zenon@gmail.com</td>\n",
-       "      <td>Compre 2 e leve 3 frascos - EvoProst Gotas - LG</td>\n",
-       "      <td>1</td>\n",
-       "      <td>296,9</td>\n",
-       "      <td>Aguardando pagamento</td>\n",
-       "      <td>Boleto Bancário</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2196</th>\n",
-       "      <td>135177726</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>Antônio Divino</td>\n",
-       "      <td>waldodivino@gmail.com</td>\n",
-       "      <td>Compre 2 e leve 3 frascos - EvoProst Gotas - LG</td>\n",
-       "      <td>1</td>\n",
-       "      <td>357,71</td>\n",
-       "      <td>Pagamento aprovado</td>\n",
-       "      <td>Visa</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2197</th>\n",
-       "      <td>135177692</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>Luiz esteves</td>\n",
-       "      <td>sevetse.itapebi@gmail.com</td>\n",
-       "      <td>Compre 3 e Leve 5 Frascos INSUFREE Gotas - LH</td>\n",
-       "      <td>1</td>\n",
-       "      <td>396,9</td>\n",
-       "      <td>Aguardando pagamento</td>\n",
-       "      <td>Boleto Bancário</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2198</th>\n",
-       "      <td>135177138</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>25/04/2025</td>\n",
-       "      <td>SALETE ROSA BOSCATO</td>\n",
-       "      <td>saleteboscato@gmail.com</td>\n",
-       "      <td>PROMOÇÃO! Compre 2 e Leve 5 Frascos INSUFREE G...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>296,9</td>\n",
-       "      <td>Pagamento aprovado</td>\n",
-       "      <td>Visa</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2199 rows × 10 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       0                1                  2  \\\n",
-       "0     ID do Pedido Yampi  Data de Criação  Data de Pagamento   \n",
-       "1              134546134       14/04/2025         14/04/2025   \n",
-       "2              134546014       14/04/2025         14/04/2025   \n",
-       "3              134545763       14/04/2025         14/04/2025   \n",
-       "4              134545738       14/04/2025                      \n",
-       "...                  ...              ...                ...   \n",
-       "2194           135176701       25/04/2025         25/04/2025   \n",
-       "2195           135177779       25/04/2025         25/04/2025   \n",
-       "2196           135177726       25/04/2025         25/04/2025   \n",
-       "2197           135177692       25/04/2025         25/04/2025   \n",
-       "2198           135177138       25/04/2025         25/04/2025   \n",
-       "\n",
-       "                             3                                  4  \\\n",
-       "0                      Cliente                              Email   \n",
-       "1     Cláudio Santos de Moraes  claudiomoraes@apmpriopreto.com.br   \n",
-       "2     Carlos Donizete Rossetti      transporte.rossetti@gmail.com   \n",
-       "3                NELSON VARGAS       nelson.vargas@premold.com.br   \n",
-       "4        Sílvio Gregório viana           123gferromacae@gmail.com   \n",
-       "...                        ...                                ...   \n",
-       "2194   Ronaldo Dias Dos Santos                rdo473250@gmail.com   \n",
-       "2195  José Celso da Costa Neto                 jc.zenon@gmail.com   \n",
-       "2196            Antônio Divino              waldodivino@gmail.com   \n",
-       "2197              Luiz esteves          sevetse.itapebi@gmail.com   \n",
-       "2198       SALETE ROSA BOSCATO            saleteboscato@gmail.com   \n",
-       "\n",
-       "                                                      5           6  \\\n",
-       "0                                               Produto  Quantidade   \n",
-       "1                 6 Frascos - Evo Prost Gotas (VJ CALL)           1   \n",
-       "2         Compre 3 leve 5 frascos Urocianina Gotas - LH           1   \n",
-       "3     Compre 2 e leve 3 frascos - Urocianina Gotas - JP           1   \n",
-       "4         Compre 3 e Leve 5 Frascos INSUFREE Gotas - LH           1   \n",
-       "...                                                 ...         ...   \n",
-       "2194  Compre 5 e leve 10 frascos - Urocianina Gotas ...           1   \n",
-       "2195    Compre 2 e leve 3 frascos - EvoProst Gotas - LG           1   \n",
-       "2196    Compre 2 e leve 3 frascos - EvoProst Gotas - LG           1   \n",
-       "2197      Compre 3 e Leve 5 Frascos INSUFREE Gotas - LH           1   \n",
-       "2198  PROMOÇÃO! Compre 2 e Leve 5 Frascos INSUFREE G...           1   \n",
-       "\n",
-       "                7                     8                    9  \n",
-       "0     Valor Total                Status  Método de Pagamento  \n",
-       "1             290              Faturado                  Elo  \n",
-       "2             397              Faturado     American Express  \n",
-       "3             297         Em transporte                 Visa  \n",
-       "4           396,9             Cancelado      Boleto Bancário  \n",
-       "...           ...                   ...                  ...  \n",
-       "2194          597  Aguardando pagamento      Boleto Bancário  \n",
-       "2195        296,9  Aguardando pagamento      Boleto Bancário  \n",
-       "2196       357,71    Pagamento aprovado                 Visa  \n",
-       "2197        396,9  Aguardando pagamento      Boleto Bancário  \n",
-       "2198        296,9    Pagamento aprovado                 Visa  \n",
-       "\n",
-       "[2199 rows x 10 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'sheet' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m raw_data = \u001b[43msheet\u001b[49m.worksheet(\u001b[33m\"\u001b[39m\u001b[33mDados Brutos\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      3\u001b[39m v = raw_data.get_all_values()\n\u001b[32m      4\u001b[39m df = pd.DataFrame(v)\n",
+      "\u001b[31mNameError\u001b[39m: name 'sheet' is not defined"
+     ]
     }
    ],
    "source": [
