chore: duplicate, is manager acronym

--- a/modeling_sheets.ipynb
+++ b/modeling_sheets.ipynb
@@ -59,59 +59,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              0           1          2   3       4   5   6   \\\n",
-      "2682  14/04/2025  14/04/2025  134546134  VJ    CALL  No  No   \n",
-      "2683  14/04/2025  14/04/2025  134546014  LH  Normal  No  No   \n",
-      "2684  14/04/2025  14/04/2025  134545763  JP  Normal  No  No   \n",
-      "2685  14/04/2025              134545738  LH  Normal  No  No   \n",
-      "2686  14/04/2025  14/04/2025  134545715  LH  Normal  No  No   \n",
-      "...          ...         ...        ...  ..     ...  ..  ..   \n",
-      "9003                                                          \n",
-      "9004                                                          \n",
-      "9005                                                          \n",
-      "9006                                                          \n",
-      "9007                                                          \n",
-      "\n",
-      "                            7                                  8   \\\n",
-      "2682  Cláudio Santos de Moraes  claudiomoraes@apmpriopreto.com.br   \n",
-      "2683  Carlos Donizete Rossetti      transporte.rossetti@gmail.com   \n",
-      "2684             NELSON VARGAS       nelson.vargas@premold.com.br   \n",
-      "2685     Sílvio Gregório viana           123gferromacae@gmail.com   \n",
-      "2686  MARLENE DE OLIVEIRA LEAL          marleneleal07@hotmail.com   \n",
-      "...                        ...                                ...   \n",
-      "9003                                                                \n",
-      "9004                                                                \n",
-      "9005                                                                \n",
-      "9006                                                                \n",
-      "9007                                                                \n",
-      "\n",
-      "                                                     9                 10 11  \\\n",
-      "2682              6 Frascos - Evo Prost Gotas (VJ CALL)   Evo Prost Gotas  6   \n",
-      "2683      Compre 3 leve 5 frascos Urocianina Gotas - LH  Urocianina Gotas  5   \n",
-      "2684  Compre 2 e leve 3 frascos - Urocianina Gotas - JP  Urocianina Gotas  3   \n",
-      "2685      Compre 3 e Leve 5 Frascos INSUFREE Gotas - LH    Insufree Gotas  5   \n",
-      "2686  PROMOÇÃO! Compre 2 e Leve 5 Frascos INSUFREE G...    Insufree Gotas  5   \n",
-      "...                                                 ...               ... ..   \n",
-      "9003                                                                           \n",
-      "9004                                                                           \n",
-      "9005                                                                           \n",
-      "9006                                                                           \n",
-      "9007                                                                           \n",
-      "\n",
-      "         12             13                14 15          16  17      18  \n",
-      "2682    290       Faturado               Elo     03/02/2025  VJ   27,34  \n",
-      "2683    397       Faturado  American Express     03/02/2025  VJ   27,52  \n",
-      "2684    297  Em transporte              Visa     03/02/2025  VJ   41,76  \n",
-      "2685  396,9      Cancelado   Boleto Bancário     03/02/2025  VJ   69,97  \n",
-      "2686  296,9  Em transporte               Pix     03/02/2025  VJ   63,55  \n",
-      "...     ...            ...               ... ..         ...  ..     ...  \n",
-      "9003                                             09/04/2025  JP   71,30  \n",
-      "9004                                             09/04/2025  JP  140,19  \n",
-      "9005                                             09/04/2025  JP   30,93  \n",
-      "9006                                             09/04/2025  JP   38,33  \n",
-      "9007                                             10/04/2025  JP  720,23  \n",
-      "\n",
-      "[6113 rows x 19 columns]\n"
+      "Empty DataFrame\n",
+      "Columns: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18]\n",
+      "Index: []\n"
      ]
     }
    ],
@@ -129,18 +79,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1       134546134\n",
-      "2       134546014\n",
-      "3       134545763\n",
-      "4       134545738\n",
-      "5       134545715\n",
-      "          ...    \n",
-      "9003             \n",
-      "9004             \n",
-      "9005             \n",
-      "9006             \n",
-      "9007             \n",
-      "Name: 2, Length: 8795, dtype: object\n"
+      "Series([], Name: 2, dtype: object)\n"
      ]
     }
    ],
@@ -457,14 +396,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Quantidade de duplicados: 6113\n"
+      "Quantidade de duplicados: 0\n"
      ]
     }
    ],
